--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,13 @@
   "author": "Joz-Bruer Quince",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18"
   }
 }
