--- a/server/package.json
+++ b/server/package.json
@@ -9,16 +9,20 @@
   "author": "Joz-Bruer Quince",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.256.0",
+    "aws-sdk": "^2.1300.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "mongoose": "^6.8.4",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.11.18"
   }
 }
