--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.256.0",
+    "@aws-sdk/s3-request-presigner": "^3.272.0",
     "aws-sdk": "^2.1300.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
